# BlockSmith

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
adventOfCode/: CMakeLists.txt  day01.h  main.cpp
config/: engine.json  renderer.json  window.json  window2.json
src/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  IConfigData.h
src/engine/: CMakeLists.txt  GameEngine.cpp  GameEngine.h  JsonWrapper.h  Renderer.cpp  Renderer.h  RendererConfigData.h  Window.cpp  Window.h
src/logger/: Logger.cpp  Logger.h
src/scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
src/ui/: CMakeLists.txt  DropdownValue.cpp  DropdownValue.h  Menu.cpp  Settings.cpp  Settings.h
submodules/: CMakeLists.txt
